# backend_art_gallery

./: .gitignore  Jenkinsfile  Makefile  README.md  pyproject.toml  start-docker-service.sh  start-kubernetes-service.sh
ai_mf_backend/: .env.sample  __init__.py  api_application.py  celery_tasks.py  django_manage.py  fastapi_application.py  manage.py  signals.py
ai_mf_backend/app/: admin.py  apps.py  models.py
ai_mf_backend/core/: __init__.py  celery_init.py  django_admin.py  django_urls.py  fastapi_blueprints.py
ai_mf_backend/migrations/: 0001_allowed_response_option_score_and_more.py  0001_alter_occupation_occupation.py  0001_initial.py  0001_initial_squashed_0004_usercontactinfo_questionnaire_filled_and_more.py  0001_reference.py  0001_squashed_initial.py  0002_allowed_response_amfimutualfund_annualincome_gender_and_more.py  0002_allowed_response_deleted_conditionalquestion_deleted_and_more.py  0002_alter_allowed_response_position.py  0002_alter_maritalstatus_marital_status.py  0002_alter_userpersonaldetails_add_date_and_more.py  0002_delete_reference_alter_section_section.py  0003_alter_allowed_response_option_score_and_more.py  0003_reference.py  0004_alter_section_section_score.py  0004_usercontactinfo_questionnaire_filled_and_more.py  0005_alter_userfinancialdetails_investment_style_and_more.py  0005_merge_20241219_1850.py  0005_merge_20241224_1125.py  0006_rename_weight_per_option_allowed_response_response_weight_and_more.py  constraints.py
ai_mf_backend/models/: __init__.py
ai_mf_backend/scripts/: marker_options_text_populate.py  mf_database_populate.py  mf_marker_populate.py  mf_reference_table_populate.py  options_database_populate.py  reference_table_populate.py  (+2 more)
ai_mf_dockerfiles/: Dockerfile.ai_mf_backend  docker-compose.ai_mf_backend.yml  docker-compose.flower.yml  docker-compose.postgres.yml  docker-compose.redis.yml
dockerfiles/: docker-compose.ai_mf_backend.yml  docker-compose.mongo.yml
kubernetes/: ai-mf-api-deployment.yaml  ai-mf-pipe-deployment.yaml  mongo-deployment.yaml  redis-deployment.yaml
skti_system_backend/: __init__.py  api_application.py  django_manage.py
tests/: conftest.py  questionaire_test.py
(+194 files in other folders)
