[tool.poetry]
name = "ai-mf-backend"
version = "0.1.0"
description = ""
authors = ["Anchit Shrivastava <anchit@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
mongoengine = "^0.28.2"
celery = "^5.3.6"
flower = "^2.0.1"
gevent = "^24.2.1"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
redis = "^5.0.3"
newrelic = "^9.8.0"
tenacity = "^8.3.0"
python-slugify = "^8.0.4"
boto3 = "^1.34.107"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
