[tool.poetry]
name = "skti-system-backend"
version = "0.1.0"
description = ""
authors = ["Mawar <mawar@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
celery = "^5.3.6"
flower = "^2.0.1"
gevent = "^24.2.1"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
redis = "^5.0.3"
newrelic = "^9.8.0"
tenacity = "^8.3.0"
python-slugify = "^8.0.4"
boto3 = "^1.34.107"
psycopg2-binary = "^2.9.10"  
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
slowapi = "^0.1.9"
django = "^5.1.1"
mysqlclient = "^2.2.0"
pillow = "^11.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
